# esp32-homekit-contact-and-temperature-sensor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig
main/: dht11.c  dht11.h  main.c
